gRPC/service.yml
apiVersion: v1
kind: Service
metadata:
  name: grpc-service
  labels:
    app: grpc
spec:
  selector:
    app: grpc
  ports:
    - port: 3000
      targetPort: 3001
  type: ClusterIP
